[tool.poetry]
name = "crossworld"
version = "0.1.0"
description = "A python package for extracting crossword from Le Monde newspaper"
authors = ["Matthias Meulien <orontee@gmail.com>"]
packages = [{include = "crossworld"}]

[tool.poetry.dependencies]
python = "^3.7"
"pdfminer.six" = "^20200402"
pdfrw = "^0.4"
tqdm = "^4.45.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.770"
pycodestyle = "^2.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[mypy]
ignore_missing_imports = True
